--- a/main.css
+++ b/main.css
@@ -1,52 +1,167 @@
 :root{
-	--bck: darkgray;
+	--back : black;
 	--text: white;
-	--idle: white;
-	--wrong: red;
-	--correct: green;
+	--border: darkgrey;
+	--idle: gray;
+	--correct: #73F59D;
+	--placed: #F5DB73;
+	--wrong: #F57673;
+	--size: 5vw;
 }
-h1{text-align: center;}
 body{
-	text-align: center;
+	display: flex;
+	flex-direction: column;
+	font-family: std;
+	font-weight: 900;
+	background-color: var(--back);
 	color: var(--text);
-	background-color: var(--bck);
+}
+@font-face{
+	font-family:std;
+	src:url("Lato-Regular.ttf")
+}	
+h1{
+text-align: center;
+font-size:350%;
+margin-bottom: 0;
+margin-top:0;
+}
+button{
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	align-items:center;
+font-family: std;
+transition:0.5s all;
+font-size:calc(var(--size) * 0.625);
+background-color:var(--back);
+color: var(--text);
+border:var(--text)solid 0.25vw;
+border-radius:25vw;
+width: calc(var(--size) * 5.25);
+height: calc(var(--size) * 1.25);
+margin: 1vh auto;
+}
+button:hover{
+cursor: pointer;
+}
+button::after{
+	content:"";
+	border-radius: var(--size);
+	padding:calc(var(--size) / 10);
+	margin-top: 0.2vh;
+	padding-left: calc(var(--size) / 3);
+	padding-right: calc(var(--size) / 3);
+	background: linear-gradient(90deg, var(--wrong) 0%, var(--correct) 100%);
+	transition: 0.5s all;
+}
+button:hover::after{
+	padding-left: calc(var(--size) * 2);
+	padding-right: calc(var(--size) * 2);
+}
+p{
+text-align: center;
+font-size: 200%;
+margin:0;
+}
+
+div{
+	width: calc(var(--size) * 6);
+	margin: auto;
 }
 column{
-	margin: auto;
-	padding-left: 32.5vw;
 	display: flex;
 	flex-direction: column;
 }
 row{
-	display:flex;
-	flex-direction: row;
+	display: flex;
+	flex-direction:row;
 }
 c{
-	border: gray solid 0.5vw;
-	border-radius: 15%;
-	padding: 3%;
-	width: 1.5vw;
-	height: 1.5vw;
-	background-color: white;
-	margin: 0.25%;
-	color: black;
-	font-size: 2.5vw;
-	font-weight: 900;
 	text-align: center;
-}
-.idle{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	font-size: calc(var(--size) / 1.5);
 	color: black;
-	background-color: white;
+	border-radius: 1.25vw;
+	margin: 0.125vw;
+	background-color: var(--text);
+	width: var(--size);
+	height: var(--size);
+	border: var(--border) solid 0.5vw;
 }
-.placed{
-	background-color: yellow;
+.idle::after{
+	position: static;
+	content: "";
+	margin: auto;
+	border-radius: 25vw;
+	width: calc(var(--size) * 0.75);
+	height: calc(var(--size) * 0.15);
+	background-color: var(--idle);
 }
-.correct{
+.placed::after{
+	position: static;
+	content: "";
+	margin: auto;
+	border-radius: 25vw;
+	width: calc(var(--size) * 0.75);
+	height: calc(var(--size) * 0.15);
+	background-color: var(--placed);
+}
+.correct::after{
+	position: static;
+	content: "";
+	margin: auto;
+	border-radius: 25vw;
+	width: calc(var(--size) * 0.75);
+	height: calc(var(--size) * 0.15);
 	background-color: var(--correct);
 }
-.wrong{
-	background-color: gray;
+.wrong::after{
+	position: static;
+	content: "";
+	margin: auto;
+	border-radius: 25vw;
+	width: calc(var(--size) * 0.75);
+	height: calc(var(--size) * 0.15);
+	background-color: var(--wrong);
 }
 .nonvisible{
 	display: none;
+}
+.keyboard{
+	width: 75%;
+	display: flex;
+	flex-direction: column;
+	align-items:center;
+	margin: auto;
+}
+.keyboard column{
+	display: flex;
+	flex-direction: column;
+	align-items:center;
+	margin: auto;
+}
+.keyboard .row{
+	display: flex;
+	flex-direction:row;
+	text-align: center;
+	margin:auto;
+}
+.keyboard button{
+	border-radius: 0.5vw;
+	margin: 0;
+	width: var(--size);
+	height: var(--size);
+}
+.second button{
+	width: calc(var(--size) * 1.11);
+}
+.keyboard button:hover{cursor:pointer}
+.keyboard button::after{
+	display:none;
+}
+.keyboard .two{
+	width: calc(var(--size) * 1.5);
 }
